# dm2-tool

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/: settings.example.json
.claude/commands/dm2/: apply.md  archive.md  bulk-archive.md  continue.md  explore.md  ff.md  new.md  onboard.md  propose.md  verify.md
.claude/skills/dm2-apply-workflow/: SKILL.md
.claude/skills/dm2-archive-workflow/: SKILL.md
.claude/skills/dm2-bulk-archive-workflow/: SKILL.md
.claude/skills/dm2-continue-workflow/: SKILL.md
.claude/skills/dm2-explore-workflow/: SKILL.md
.claude/skills/dm2-ff-workflow/: SKILL.md
.claude/skills/dm2-new-workflow/: SKILL.md
.claude/skills/dm2-onboard-workflow/: SKILL.md
.claude/skills/dm2-propose-workflow/: SKILL.md
.claude/skills/dm2-verify-workflow/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  release.yml  test.yml  verify.yml
dm2-reference/: concerns.yaml  group-to-views.yaml  view-representations.yaml
dm2-reference/core/: _dm2_v202_extract.json  views.yaml
dm2-reference/examples/guidance-rules/: Rule-Template.md  中华人民共和国个人信息保护法.md  中华人民共和国密码法.md  中华人民共和国数据安全法.md  中华人民共和国网络安全法.md
dm2-reference/examples/guidance-standards/: GB-T-22239-2008-信息系统安全等级保护基本要求.md  (+6 more)
docs/: dm2-workflows.md  readme.md
schemas/: analyze.json  common.json  cynefin.json  generate.json  run.json  status.json
src/dm2/: __init__.py  __main__.py
test/: conftest.py  test_frontmatter.py  test_indexer.py  test_paths.py
(+375 files in other folders)
