[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dm2-tool"
version = "0.1.0"
description = "DoDAF Meta Model 2.02 系统工程辅助工具"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "anthropic>=0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]
openai = [
    "openai>=1.0",
]

[project.scripts]
dm2 = "dm2.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dm2*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md"]
dm2 = ["dm2-reference/core/**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["dm2-reference/reference/**", "dm2-reference/examples/**"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # pycodestyle, pyflakes, warnings, import sorting
ignore = ["E501"]  # line too long (handled by formatter)

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
